--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -53,7 +53,12 @@
             </div>
             <form class="search-bar d-flex">
                 <input class="form-control me-2" type="search" placeholder="Pesquisar artista ou evento">
-                <button class="btn btn-outline-success" type="submit">Pesquisar<ion-icon name="search-outline"></ion-icon></button>
+                <button class="btn btn-outline-success" type="submit">
+                    Pesquisar
+                    <div class="icon-search">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </div>
+                </button>
             </form>
         </nav>
     </body>
