--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,8 +22,6 @@
 }
 
 .carousel-control-prev-icon {
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 50%;
     width: 50px; 
     height: 50px; 
     transform: scale(1.4); 
@@ -31,8 +29,6 @@
 }
 
 .carousel-control-next-icon {
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 50%;
     width: 50px;
     height: 50px; 
     transform: scale(1.4); 
@@ -49,7 +45,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    padding: 30px;
+    padding: 60px;
     color: white;
     opacity: 0;
     transition: opacity 0.5s ease;
@@ -63,4 +59,22 @@
     display: block;
     text-decoration: none;
     color: inherit;
+}
+
+.btn-comprar {
+  background-color: #82229a; 
+  border: none;
+  color: white;
+  padding: 15px 30px; 
+  font-size: 16px; 
+  border-radius: 5px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  align-self: flex-start;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.btn-comprar:hover {
+    background-color: #6a1a7d;
 }
