--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,20 +1,23 @@
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css');
+@import url(../style.css);
+
+header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+}
+
 /*---------------------------------*/
 /* Estilização do banner slideshow */
 /*---------------------------------*/
 
-iframe {
-    display: block;
-    margin: 0;
-    padding: 0;
-    border: none;
-}
-
-#customCarousel .carousel-item img {
+#custom-carousel .carousel-item img {
     height: 450px;
     position: relative;
 }
 
-#customCarousel .carousel-caption {
+#custom-carousel .carousel-caption {
     position: absolute;
     bottom: 0%;
     left: 0%;
@@ -23,12 +26,12 @@ iframe {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
-#customCarousel .carousel-caption h5 {
+#custom-carousel .carousel-caption h5 {
     font-size: 1.5rem;
     font-weight: bold;
 }
 
-#customCarousel .carousel-caption p {
+#custom-carousel .carousel-caption p {
     font-size: 1.3rem;
 }
 
@@ -96,7 +99,7 @@ iframe {
     background-color: #333; 
 }
 
-.btn-comprar {
+.btn-shop {
     background-color: #5f1571 !important; 
     border: none;
     color: white;
@@ -113,7 +116,7 @@ iframe {
     z-index: 2;
 }
 
-.btn-comprar:hover {
+.btn-shop:hover {
     background-color: #6a1a7d;
 }
 
