--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600&display=swap');
 
 html {
-    font-family: 'JetBrains Mono' !important;
     font-size: 14px !important;
+}
+
+body {
+    font-family: 'JetBrains Mono';
+    font-size: 16px;
 }
