--- a/public/stylesheets/components/header.css
+++ b/public/stylesheets/components/header.css
@@ -20,7 +20,16 @@
     color: white;
 }
 
-.nav-link:hover, .navbar-brand:hover  {
+.nav-link:hover  {
     text-decoration: underline;
     color: #e6e6e6;
+}
+
+.navbar-brand:hover {
+    color: white;
+}
+
+.logo {
+    width: 20%;
+    height: auto;
 }
