--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -36,21 +36,21 @@ header {
 }
 
 .carousel-control-prev-icon {
-    width: 50px; 
-    height: 50px; 
+    width: 30px; 
+    height: 30px; 
     transform: scale(1.4); 
     margin-right: 150px;
 }
 
 .carousel-control-next-icon {
-    width: 50px;
-    height: 50px; 
+    width: 30px;
+    height: 30px; 
     transform: scale(1.4); 
     margin-left: 150px;
 }
 
 .carousel-control-prev, .carousel-control-next {
-    top: 50% !important;
+    top: 50%;
     transform: translateY(-50%); 
     background: none; 
     z-index: 3;
@@ -59,11 +59,11 @@ header {
 
 .carousel-caption {
     position: absolute;
-    bottom: 0;
+    bottom: -40px !important;
     left: 0;
     width: 100%;
-    height: auto;
-    background: linear-gradient(to top, rgba(130, 34, 154, 0.85), rgba(130, 34, 154, 0.4), rgba(130, 34, 154, 0)); 
+    height: 60%;
+    background: linear-gradient(to top, rgba(130, 34, 154, 0.85) 35%, rgba(130, 34, 154, 0.4), rgba(130, 34, 154, 0)); 
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -96,16 +96,16 @@ header {
 }
 
 .carousel-indicators .active {
-    background-color: #333; 
+    background-color: #ffffff; 
 }
 
 .btn-shop {
-    background-color: #5f1571 !important; 
+    background-color: #5f1571; 
     border: none;
     color: white;
-    padding: 15px 30px; 
-    font-size: 1.1rem !important;
-    font-weight: 500 !important;
+    padding: 10px 20px; 
+    font-size: 1.1rem;
+    font-weight: 500;
     border-radius: 5px;
     text-transform: uppercase;
     margin-bottom: 10px;
