--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,12 +100,12 @@
                         <!-- Evento 1 -->
                         <div class="col-md-4 mb-4">
                             <a href="oliviaRodrigo.html" class="event-card">
-                                <div class="card h-100">
+                                <div class="card h-80">
                                     <img src="/images/oliviaRodrigo.gif" class="card-img-top" alt="Evento 1">
-                                    <div class="card-body text-center">
+                                    <div class="card-body">
                                         <h5 class="card-title">GUTS World Tour - Olivia Rodrigo</h5>
-                                        <p class="card-text">Datas em março de 2025.</p>
-                                        <a href="oliviaRodrigo.html" class="btn btn-shop">Comprar</a>
+                                        <p class="card-text">Datas em março de 2025</p>
+                                        <a href="oliviaRodrigo.html" class="btn btn-shop" id="btn-card-shop">Comprar</a>
                                     </div>
                                 </div>
                             </a>
@@ -113,12 +113,12 @@
                         <!-- Evento 2 -->
                         <div class="col-md-4 mb-4">
                             <a href="lollapalooza.html" class="event-card">
-                                <div class="card h-100">
+                                <div class="card h-80">
                                     <img src="/images/lollapalooza.gif" class="card-img-top" alt="Evento 2">
-                                    <div class="card-body text-center">
+                                    <div class="card-body">
                                         <h5 class="card-title">Lollapalooza Brasil 2025</h5>
                                         <p class="card-text">Múltiplas datas em São Paulo</p>
-                                        <a href="lollapalooza.html" class="btn btn-shop">Comprar</a>
+                                        <a href="lollapalooza.html" class="btn btn-shop" id="btn-card-shop">Comprar</a>
                                     </div>
                                 </div>
                             </a>
@@ -126,12 +126,12 @@
                         <!-- Evento 3 -->
                         <div class="col-md-4 mb-4">
                             <a href="theTown.html" class="event-card">
-                                <div class="card h-100">
+                                <div class="card h-80">
                                     <img src="/images/theTown.gif" class="card-img-top" alt="Evento 3">
-                                    <div class="card-body text-center">
+                                    <div class="card-body">
                                         <h5 class="card-title">The Town 2025</h5>
                                         <p class="card-text">Múltiplas datas em São Paulo</p>
-                                        <a href="theTown.html" class="btn btn-shop">Comprar</a>
+                                        <a href="theTown.html" class="btn btn-shop" id="btn-card-shop">Comprar</a>
                                     </div>
                                 </div>
                             </a>
@@ -142,7 +142,8 @@
         </div>
         
         <!-- Rodapé  -->
-        <footer>   
+        <footer id="footer">
+            <%- include('components/footer') %>
         </footer>
     </body>
 </html>
