--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -34,7 +34,7 @@
         </div>
 
         <div class="footer-logo text-center mt-4">
-            <a class="navbar-brand" href="">
+            <a class="navbar-brand" href="/">
                 <img src="/images/logo.svg" class="logo">
             </a>
             <div class="social-icons text-center">
