--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,3 +8,10 @@ body {
     font-family: 'JetBrains Mono';
     font-size: 16px;
 }
+
+header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+}
