--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,6 +7,8 @@
         <link href="/stylesheets/register.css" rel="stylesheet"> 
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
         <script src="/javascripts/components/header.js" defer></script>
         <script src="/javascripts/register.js" defer></script>
 
@@ -25,37 +27,48 @@
                 <div class="col-12">
                     <label for="name" class="form-label">Nome completo</label>
                     <input type="text" class="form-control" id="name" placeholder="Joãozinho Fulano de Tal" required>
+                    <div class="invalid-feedback"><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
                 </div>
                 <div class="col-12">
                     <label for="user" class="form-label">Usuário</label>
                     <input type="text" class="form-control" id="user" placeholder="jzinho13" required>
+                    <div class="invalid-feedback"><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
                 </div>
                 <div class="col-md-6">
                     <label for="cpf" class="form-label">CPF</label>
-                    <input type="number" class="form-control" id="cpf" placeholder="000.000.000-00" required>
-                    <div class="invalid-feedback">
-                        Por favor, forneça um CPF válido.
-                    </div>
+                    <input type="text" class="form-control" id="cpf" placeholder="000.000.000-00" required>
+                    <div class="invalid-feedback"><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
                 </div>
                 <div class="col-md-6">
                     <label for="birth-date" class="form-label">Data de nascimento</label>
                     <input type="date" class="form-control" id="birth-date" required>
+                    <div class="invalid-feedback"><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
                 </div>
                 <div class="col-12">
                     <label for="cellphone" class="form-label">Celular</label>
-                    <input type="number" class="form-control" id="cellphone" placeholder="(00) 00000-0000" required>
+                    <input type="text" class="form-control" id="cellphone" placeholder="(00) 00000-0000" required>
+                    <div class="invalid-feedback"><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
                 </div>
                 <div class="col-12">
                     <label for="email" class="form-label">Email</label>
                     <input type="text" class="form-control" id="email" placeholder="joaozinho@email.com" required>
+                    <div class="invalid-feedback"><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
                 </div>
                 <div class="col-12">
                     <label for="password" class="form-label">Senha</label>
                     <input type="password" class="form-control" id="password" placeholder="********" required>
+                    <div class="invalid-feedback"><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
+                    <div class="progress-container">
+                        <div class="progress">
+                            <div id="password-strength-meter" class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div id="password-strength-msg" class="strength-message"></div>
+                    </div>
                 </div>
                 <div class="col-12">
                     <label for="check-password" class="form-label">Confirme sua senha</label>
                     <input type="password" class="form-control" id="check-password" placeholder="********" required>
+                    <div class="invalid-feedback"><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
                 </div>
                 <button type="submit" class="btn btn-primary">Cadastrar</button>
             </form>
