--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,12 @@
         <link href="/stylesheets/login.css" rel="stylesheet">
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <script src="/javascripts/components/header.js"></script>
+        <script src="/javascripts/login.js"></script>
 
         <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
         <title>ShowPass</title>
@@ -31,7 +36,12 @@
                 <!-- Senha -->
                 <div class="mb-3">
                     <label for="password" class="form-label text-start d-block">Senha</label>
-                    <input type="password" class="form-control" id="password" placeholder="Digite sua senha">
+                    <div class="password-container">
+                        <input type="password" class="form-control" id="password" placeholder="********" required>
+                        <button type="button" id="toggle-password" class="btn btn-secondary">
+                            <ion-icon name="eye-off"></ion-icon>
+                        </button>
+                    </div>
                     <div class="text-end mt-1">
                         <a href="" class="small text-decoration-none" id="password-forgotten">Esqueceu sua senha?</a>
                     </div>
