Mudando ícone da aba do navegador

--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -35,7 +35,7 @@
 
         <div class="footer-logo text-center mt-4">
             <a class="navbar-brand" href="/">
-                <img src="/images/logo.svg" class="logo">
+                <img src="/images/logo-light.svg" class="logo">
             </a>
             <div class="social-icons text-center">
                 <a href="#"><i class="bi bi-linkedin"></i></a>
