--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -7,17 +7,17 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="/">
-                <img src="/images/logo.svg" class="logo">
+                <img src="/images/logo-light.svg" class="logo">
                 ShowPass
             </a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">Meus pedidos</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="meus-pedidos">Meus pedidos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Meu perfil</a>
-                    </li> -->
+                        <a class="nav-link" href="meu-perfil">Meu perfil</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="suporte">Suporte ao Fã</a>
                     </li>
@@ -27,9 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="entrar">Entrar</a>
                     </li>
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Sair</a>
-                    </li> -->
+                    </li>
                 </ul>
             </div>
         </div>
