--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,9 @@
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
         <script src="/javascripts/components/header.js" defer></script>
+        <script src="/javascripts/icon.js" defer></script>
 
-        <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
+        <link rel="icon" href="/images/logo-light.svg" type="image/svg+xml">
         <title>ShowPass</title>
     </head>
     <body class="flex-column min-vh-100">
