--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,8 +14,9 @@
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <script src="/javascripts/components/header.js"></script>
         <script src="/javascripts/login.js"></script>
+        <script src="/javascripts/icon.js" defer></script>
 
-        <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
+        <link rel="icon" href="/images/logo-light.svg" type="image/svg+xml">
         <title>ShowPass</title>
     </head>
     <body class="d-flex flex-column min-vh-100">
