tela de Suporte ao Fã

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
         <title>ShowPass</title>
     </head>
-    <body class="flex-column min-vh-100">
+    <body class="d-flex flex-column min-vh-100">
         <!-- Barra de navegação -->
         <header id="header">
             <%- include('components/header') %>
