--- a/views/support.ejs
+++ b/views/support.ejs
@@ -27,7 +27,7 @@
                 <!-- Formulário de dúvidas -->
                 <form class="form-input row g-4">
                     <!-- Caixa de seleção de categoria -->
-                    <select class="form-select">
+                    <select class="form-select" required>
                         <option value="" disabled selected>Selecione uma categoria</option>
                         <option value="1">Processo de compra</option>
                         <option value="2">Cancelamento e Troca</option>
@@ -36,7 +36,7 @@
                     </select>
             
                     <!-- Campo de entrada de texto -->
-                    <textarea class="form-control" placeholder="Digite aqui suas dúvidas e o que procura"></textarea>
+                    <textarea class="form-control" required placeholder="Digite aqui suas dúvidas e o que procura"></textarea>
                     
                     <!-- Botão de envio -->
                     <button class="btn btn-primary mt-4" type="submit">Enviar</button>
