Criando validação para o login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <script src="/javascripts/components/header.js"></script>
-        <script src="/javascripts/login.js"></script>
+        <script src="/javascripts/login.js" defer></script>
         <script src="/javascripts/icon.js" defer></script>
 
         <link rel="icon" href="/images/logo-light.svg" type="image/svg+xml">
@@ -26,18 +26,20 @@
 
         <!-- Conteúdo da página -->
         <div class="content flex-grow-1" id="content">
-            <form class="form-input row g-1">
+            <form action="logar" method="POST" class="form-input row g-1 needs-validation" novalidate>
                 <!-- Usuário/Email -->
                 <div class="mb-3">
                     <label for="email" class="form-label text-start d-block">Usuário/Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Digite seu usuário ou email">
+                    <input type="text" class="form-control" id="email" name="email" placeholder="Digite seu usuário ou email" required>
+                    <div class="invalid-feedback"><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
                 </div>
 
                 <!-- Senha -->
                 <div class="mb-3">
                     <label for="password" class="form-label text-start d-block">Senha</label>
                     <div class="password-container">
-                        <input type="password" class="form-control" id="password" placeholder="********" required>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="********" required>
+                        <div class="invalid-feedback"><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
                         <button type="button" id="toggle-password" class="btn btn-secondary">
                             <ion-icon name="eye-off"></ion-icon>
                         </button>
@@ -49,9 +51,7 @@
 
                 <!-- Botão Enviar -->
                 <div class="d-grid">
-                    <a href="/" class="text-decoration-none">
-                        <button type="button" class="btn btn-primary">Enviar</button>
-                    </a>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
                 </div>
             </form>
         </div>
