--- a/public/stylesheets/events/event.css
+++ b/public/stylesheets/events/event.css
@@ -1,32 +1,90 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css');
 @import url(../style.css);
 
-.event-img img {
-    width: 100%;
-    height: auto;
+html {
+    scroll-behavior: smooth;
 }
 
-.event-info {
+section {
+    scroll-margin-top: 140px;
+}
+
+.event-img img {
+    width: 100%;
+    height: 600px;
+}
+
+.event-nav {
+    background-color: #f8f9fa;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    position: sticky;
+    top: 74px;
+    z-index: 1000;
+}
+
+.event-nav a {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+    margin-right: 27%;
+}
+
+.event-nav a:hover {
+    text-decoration: none;
+    color: #5f1571
+}
+
+.event-nav a:last-child {
+    margin-right: 0;
+}
+
+.tickets .row {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #f5e6f5;
-    padding: 15px 30px;
-    border-top: 2px solid #ddd;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 3%;
+    margin-left: 15%;
+}
+
+.tickets .col-md-4 {
+    flex: 0 0 39.5%;
+    max-width: 48%; 
+    box-sizing: border-box;
+}
+
+.card {
+    position: relative;
+    border: 1px solid #c2c2c2;
+    border-radius: 20px;
+    transition: transform 0.3s, box-shadow 0.3s;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    overflow: hidden;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.516);
+}
+
+.card-img-top {
+    height: 200px;
+    object-fit: fill;
+}
+
+.card-title {
+    font-size: 1.4rem;
+    font-weight: bold;
+    margin-bottom: 12px;
+}
+
+.card-text {
     font-size: 1.3rem;
 }
 
-.event-info select {
-    height: 50px; 
-    font-size: 18px; 
-    padding: 10px;
-    border-radius: 9px;
-    border-color: #dedfe0;
-    box-shadow: 0px 4px 6px rgba(167, 167, 167, 0.1);
-    width: auto;
-}
-
-.event-info button {
+.btn {
     background-color: #5f1571; 
     border: none;
     color: white;
@@ -43,11 +101,22 @@
     z-index: 2;
 }
 
-.event-info button:hover, .event-info button:active {
+.btn:hover, .btn:active {
     background-color: #6a1a7d !important;
 }
 
-.details {
-    margin: 30px;
-    line-height: 1.6;
+#info-section {
+    display: block;
+    max-width: 70%;
+    text-align: justify;
+    font-size: 1.4rem;
+}
+
+.info-title {
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
+.info p {
+    font-size: 1.4rem;
 }
