--- a/views/events/event.ejs
+++ b/views/events/event.ejs
@@ -98,7 +98,7 @@
                         </ul>
                     </p>
 
-                    <div class="img-sector">
+                    <div class="img-sector d-flex justify-content-center">
                         <img src="/images/setoresOlivia.png" alt="Setores do evento">
                     </div>
             </div>
